--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -376,29 +376,29 @@ header {
 /* MEALS */
 /* ----------------------------------------------- */
 
-.section-meals {
+.section-places {
     padding: 0;
 }
 
-.meals-showcase {
+.meals-places {
     list-style: none;
     width: 100%;
 }
 
-.meals-showcase li {
+.places-showcase li {
     display: block;
     float: left;
     width: 25%;
 }
 
-.meal-photo {
+.places-photo {
     width: 100%;
     margin: 0;
     overflow: hidden;
     background-color: #000;
 }
 
-.meal-photo img {
+.places-photo img {
     opacity: 0.7;
     width: 100%;
     height: auto;
@@ -409,7 +409,7 @@ header {
     transition: transform 0.5s, opacity 0.5s;
 }
 
-.meal-photo img:hover {
+.places-photo img:hover {
     opacity: 1;
     -webkit-transform: scale(1.03);
     -ms-transform: scale(1.03);
