--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -56,15 +56,35 @@
         margin: 0 0 4% 0;
     }
     
-    .proNav{
-        height:100vh!important;
+    .vis{
+        opacity: 1!important;
     }
+    
     .main-nav { 
-        display: none;
-        float: none;
-        list-style: none;
-        margin-top: -25%;
-        height: 10vh;
+        opacity: 0;
+        height: 100vh;
+        float: none!important;
+        list-style: none!important;
+        margin: 0px!important;
+        background: rgba(0,0,0,0.89)!important;
+        width:100vw!important;
+        position: fixed!important;
+        top:0!important;
+        left:0!important;
+        bottom:0;
+        right: 0;
+        text-align: center;
+        display: -webkit-box!important;
+        display: -ms-flexbox!important;
+        display: flex!important;
+        flex-direction: column!important;
+        flex-wrap:wrap!important;
+        align-items: center!important;
+        -webkit-box-pack: center!important;
+        -ms-flex-pack: center!important;
+        justify-content: center!important;
+        transition: all .5s ease-in-out;
+        z-index: 9;
     }
     .mobile-nav-icon {
         display: block;
